--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "prop-types": "15.7.2",
     "react": "16.13.0",
     "react-dom": "16.13.0",
-    "react-helmet": "5.2.1"
+    "react-helmet": "5.2.1",
+    "react-typed": "^1.2.0"
   },
   "keywords": [
     "gatsby",
