add new dependencies to support svg loader and dark mode tailwind

--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "version": "4.0.0",
   "author": "Taylor Bryant <taylor@bryant.io>",
   "dependencies": {
+    "@svgr/webpack": "^5.2.0",
     "gatsby": "2.19.29",
+    "gatsby-image": "^2.2.43",
     "gatsby-plugin-manifest": "2.2.42",
     "gatsby-plugin-offline": "3.0.35",
     "gatsby-plugin-postcss": "2.1.20",
     "gatsby-plugin-purgecss": "4.0.1",
     "gatsby-plugin-react-helmet": "3.1.22",
     "gatsby-plugin-sharp": "2.4.5",
+    "gatsby-plugin-svgr": "^2.0.2",
+    "gatsby-source-filesystem": "^2.1.55",
+    "gatsby-transformer-sharp": "^2.3.18",
     "prop-types": "15.7.2",
     "react": "16.13.0",
     "react-dom": "16.13.0",
@@ -50,7 +55,8 @@
     "eslint-plugin-react": "7.18.3",
     "gatsby-plugin-eslint": "2.0.8",
     "prettier": "1.19.1",
-    "tailwindcss": "1.2.0"
+    "tailwindcss": "1.2.0",
+    "tailwindcss-dark-mode": "^1.1.2"
   },
   "repository": {
     "type": "git",
