--- a/package.json
+++ b/package.json
@@ -4,24 +4,24 @@
   "version": "0.1.0",
   "author": "Muhammad Irwan Andriawan <irwan@andriawan.com>",
   "dependencies": {
-    "@svgr/webpack": "^5.2.0",
+    "@svgr/webpack": "5.2.0",
     "gatsby": "2.19.29",
-    "gatsby-image": "^2.2.43",
+    "gatsby-image": "2.2.43",
     "gatsby-plugin-manifest": "2.2.42",
     "gatsby-plugin-offline": "3.0.35",
     "gatsby-plugin-postcss": "2.1.20",
     "gatsby-plugin-purgecss": "4.0.1",
     "gatsby-plugin-react-helmet": "3.1.22",
     "gatsby-plugin-sharp": "2.4.5",
-    "gatsby-plugin-svgr": "^2.0.2",
-    "gatsby-source-filesystem": "^2.1.55",
-    "gatsby-transformer-sharp": "^2.3.18",
+    "gatsby-plugin-svgr": "2.0.2",
+    "gatsby-source-filesystem": "2.1.55",
+    "gatsby-transformer-sharp": "2.3.18",
     "prop-types": "15.7.2",
     "react": "16.13.0",
     "react-dom": "16.13.0",
     "react-helmet": "5.2.1",
-    "react-simple-line-icons": "^1.0.8",
-    "react-typed": "^1.2.0"
+    "react-simple-line-icons": "1.0.8",
+    "react-typed": "1.2.0"
   },
   "keywords": [
     "andriawan",
@@ -55,13 +55,13 @@
     "gatsby-plugin-eslint": "2.0.8",
     "prettier": "1.19.1",
     "tailwindcss": "1.2.0",
-    "tailwindcss-dark-mode": "^1.1.2"
+    "tailwindcss-dark-mode": "1.1.2"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/taylorbryant/gatsby-starter-tailwind"
+    "url": "https://github.com/andriawan/andriawan.com"
   },
   "bugs": {
-    "url": "https://github.com/taylorbryant/gatsby-starter-tailwind/issues"
+    "url": "https://github.com/andriawan/andriawan.com/issues"
   }
 }
