--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-plugin-sharp": "2.4.5",
     "gatsby-plugin-svgr": "2.0.2",
     "gatsby-source-filesystem": "2.1.55",
+    "gatsby-transformer-remark": "2.7.1",
     "gatsby-transformer-sharp": "2.3.18",
     "prop-types": "15.7.2",
     "react": "16.13.0",
