--- a/package.json
+++ b/package.json
@@ -4,19 +4,22 @@
   "version": "0.1.0",
   "author": "Muhammad Irwan Andriawan <irwan@andriawan.com>",
   "dependencies": {
+    "@mdx-js/mdx": "1.5.8",
+    "@mdx-js/react": "1.5.8",
     "@svgr/webpack": "5.2.0",
     "gatsby": "2.19.29",
-    "gatsby-image": "2.2.43",
-    "gatsby-plugin-manifest": "2.2.42",
+    "gatsby-image": "2.3.1",
+    "gatsby-plugin-manifest": "2.3.3",
+    "gatsby-plugin-mdx": "1.1.4",
     "gatsby-plugin-offline": "3.0.35",
     "gatsby-plugin-postcss": "2.1.20",
     "gatsby-plugin-purgecss": "4.0.1",
     "gatsby-plugin-react-helmet": "3.1.22",
-    "gatsby-plugin-sharp": "2.4.5",
+    "gatsby-plugin-sharp": "2.5.4",
     "gatsby-plugin-svgr": "2.0.2",
     "gatsby-source-filesystem": "2.1.55",
     "gatsby-transformer-remark": "2.7.1",
-    "gatsby-transformer-sharp": "2.3.18",
+    "gatsby-transformer-sharp": "2.4.4",
     "prop-types": "15.7.2",
     "react": "16.13.0",
     "react-dom": "16.13.0",
