--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-plugin-react-helmet": "3.1.22",
     "gatsby-plugin-sharp": "2.5.4",
     "gatsby-plugin-svgr": "2.0.2",
+    "gatsby-remark-images": "3.3.17",
     "gatsby-source-filesystem": "2.1.55",
     "gatsby-transformer-remark": "2.7.1",
     "gatsby-transformer-sharp": "2.4.4",
