--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "eslint-plugin-import": "2.20.1",
     "eslint-plugin-react": "7.18.3",
     "gatsby-plugin-eslint": "2.0.8",
+    "git-commit-msg-linter": "2.4.4",
     "prettier": "1.19.1",
     "tailwindcss": "1.3.4",
     "tailwindcss-dark-mode": "1.1.2"
