--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "gatsby-plugin-sharp": "2.5.4",
     "gatsby-plugin-svgr": "2.0.2",
     "gatsby-remark-images": "3.3.17",
+    "gatsby-remark-prismjs": "3.5.13",
     "gatsby-source-filesystem": "2.1.55",
-    "gatsby-transformer-remark": "2.7.1",
+    "gatsby-transformer-remark": "2.8.35",
     "gatsby-transformer-sharp": "2.4.4",
+    "prism-react-renderer": "1.1.1",
+    "prismjs": "1.21.0",
     "prop-types": "15.7.2",
     "react": "16.13.0",
     "react-dom": "16.13.0",
